# DVOC

./: .gitignore  Makefile  PAPER.md  README.md  pyproject.toml
artifacts/previous_runs/: benchmark_results.json  predict_ablation.json
artifacts/results/: ablation_results.json  alpha_ablation.json  complete_results.json
docs/: benchmark-spec.md
docs/superpowers/plans/: 2026-05-15-dval-phase1-core-and-os.md
docs/superpowers/specs/: 2026-05-15-dval-system-design.md
dvoc-core/: pyproject.toml
dvoc-core/src/dvoc_core/: __init__.py  _backend.py  _corrector.py  _loop.py  _model.py  _planner.py  _policy.py  _renderer.py  _state.py  _types.py  _verifier.py
dvoc-core/tests/: test_backend_abc.py  test_corrector.py  test_loop.py  test_planner.py  test_policy.py  test_renderer.py  test_state.py  test_types.py  test_verifier.py
dvoc-os/: pyproject.toml
dvoc-os/src/dvoc_os/: __init__.py  _backend.py  _wayland.py  _x11_windows.py
dvoc-os/tests/: test_backend.py
dvoc-py/: pyproject.toml
dvoc-py/src/dvoc/: __init__.py  _agent.py
dvoc-py/tests/: test_agent.py
dvoc-web/: pyproject.toml
dvoc-web/src/dvoc_web/: __init__.py  _backend.py
dvoc-web/tests/: conftest.py  test_backend.py  test_integration.py
dvoc-web/tests/fixtures/: button_page.html  form_page.html
examples/: run_ablation.py  run_alpha_ablation.py  run_predict_ablation.py  test_web_model.py  test_with_model.py
examples/benchmark/: _saver.py  config.py  engine.py  reporter.py  run.py
examples/benchmark/html_fixtures/: w1_login_form.html  w2_nav_bar.html  w3_card_grid.html  w4_dashboard.html  (+1 more)
(+2697 files in other folders)
